--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,63 +31,35 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">77.7 seconds</td><td class="numi">smoke </td><td class="numi">Regression </td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">111.9 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">Scenario_search.Scenario_cart</td><td><a href="#m1"><b>testAddcart</b> (smoke) </a></td><td class="numi">1</td><td>1513707803479</td><td class="numi">77436</td></tr>
+<tr><th colspan="4">Default test &#8212; failed</th></tr>
+<tr class="failedodd"><td rowspan="1">Scenario_search.scenario_class</td><td><a href="#m1"><b>TestValidSerch</b>  </a></td><td class="numi">1</td><td>1514221989680</td><td class="numi">55756</td></tr>
+<tr><th colspan="4">Default test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">Scenario_search.scenario_class</td><td><a href="#m2"><b>TestInvalidSerch</b>  </a></td><td class="numi">1</td><td>1514221933828</td><td class="numi">55830</td></tr>
 </table>
-<h1>Test</h1>
-<h2 id="m1">Scenario_search.Scenario_cart:testAddcart</h2>
+<h1>Default test</h1>
+<h2 id="m1">Scenario_search.scenario_class:TestValidSerch</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th></tr>
-<tr class="param stripe"><td>{Order_Set=1.0, Quantity=1.0, Exp_Result=Raw Mango - Diced, Search_Item=Raw Mango - Diced, TC_ID=GB_05, Script_name=Add_Cart, Execute_Flag=Y}</td>
+<tr class="param stripe"><td>{Order_Set=1.0, Exp_Result=14.0, Search_Item=Johnson powder, TC_ID=GB_04, Script_name=Valid_Search, Execute_Flag=Y}</td>
 </tr>
 <tr><td style="padding-left:3em" colspan="1">
-<p>Timed out after 25 seconds waiting for visibility of Proxy element for: DefaultElementLocator &apos;By.id: com.bigbasket.mobileapp:id/cartcountView&apos;
-Build info: version: &apos;2.53.1&apos;, revision: &apos;a36b8b1cd5757287168e54b817830adce9b0158d&apos;, time: &apos;2016-06-30 19:26:09&apos;
-System info: host: &apos;TOSHIBA&apos;, ip: &apos;192.168.1.6&apos;, os.name: &apos;Windows 8.1&apos;, os.arch: &apos;x86&apos;, os.version: &apos;6.3&apos;, java.version: &apos;1.7.0_79&apos;
-Session ID: 9e47823f-8d47-4fd0-ab1f-25b8388272ee
-Driver info: io.appium.java_client.android.AndroidDriver
-Capabilities [{platform=ANDROID, javascriptEnabled=true, appActivity=com.bigbasket.mobileapp.activity.SplashActivity, browserName=android, networkConnectionEnabled=true, desired={platformVersion=6.0, platform=ANDROID, platformName=Android, deviceName=Lenovo K50a40, appActivity=com.bigbasket.mobileapp.activity.SplashActivity, browserName=android, appPackage=com.bigbasket.mobileapp, version=}, locationContextEnabled=false, appPackage=com.bigbasket.mobileapp, version=, platformVersion=6.0, databaseEnabled=false, deviceName=AQ75NVCYEUZ975VK, platformName=Android, webStorageEnabled=false, warnings={}, takesScreenshot=true}]</p>
-org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:80)
-<br/>at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:261)
-<br/>at Generic.Base_class.Explicit_wait(Base_class.java:88)
-<br/>at Scenario_search.Scenario_cart.testAddcart(Scenario_cart.java:39)
-<br/>25 lines not shown
-<p>Caused by An element could not be located on the page using the given search parameters. (WARNING: The server did not provide any stacktrace information)
-Command duration or timeout: 81 milliseconds
-For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
-Build info: version: &apos;2.53.1&apos;, revision: &apos;a36b8b1cd5757287168e54b817830adce9b0158d&apos;, time: &apos;2016-06-30 19:26:09&apos;
-System info: host: &apos;TOSHIBA&apos;, ip: &apos;192.168.1.6&apos;, os.name: &apos;Windows 8.1&apos;, os.arch: &apos;x86&apos;, os.version: &apos;6.3&apos;, java.version: &apos;1.7.0_79&apos;
-*** Element info: {Using=id, value=com.bigbasket.mobileapp:id/cartcountView}
-Session ID: 9e47823f-8d47-4fd0-ab1f-25b8388272ee
-Driver info: io.appium.java_client.android.AndroidDriver
-Capabilities [{platform=ANDROID, javascriptEnabled=true, appActivity=com.bigbasket.mobileapp.activity.SplashActivity, browserName=android, networkConnectionEnabled=true, desired={platformVersion=6.0, platform=ANDROID, platformName=Android, deviceName=Lenovo K50a40, appActivity=com.bigbasket.mobileapp.activity.SplashActivity, browserName=android, appPackage=com.bigbasket.mobileapp, version=}, locationContextEnabled=false, appPackage=com.bigbasket.mobileapp, version=, platformVersion=6.0, databaseEnabled=false, deviceName=AQ75NVCYEUZ975VK, platformName=Android, webStorageEnabled=false, warnings={}, takesScreenshot=true}]</p>
-sun.reflect.GeneratedConstructorAccessor17.newInstance(Unknown Source)
-<br/>at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(Unknown Source)
-<br/>at java.lang.reflect.Constructor.newInstance(Unknown Source)
-<br/>at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:206)
-<br/>at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:158)
-<br/>at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:678)
-<br/>at io.appium.java_client.AppiumDriver.execute(AppiumDriver.java:180)
-<br/>at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:363)
-<br/>at org.openqa.selenium.remote.RemoteWebDriver.findElementById(RemoteWebDriver.java:413)
-<br/>at org.openqa.selenium.By$ById.findElement(By.java:218)
-<br/>at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:355)
-<br/>at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:69)
-<br/>at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
-<br/>at com.sun.proxy.$Proxy8.isDisplayed(Unknown Source)
-<br/>at org.openqa.selenium.support.ui.ExpectedConditions.elementIfVisible(ExpectedConditions.java:302)
-<br/>at org.openqa.selenium.support.ui.ExpectedConditions.access$100(ExpectedConditions.java:41)
-<br/>at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:288)
-<br/>at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:285)
-<br/>at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:238)
-<br/>at Generic.Base_class.Explicit_wait(Base_class.java:88)
-<br/>at Scenario_search.Scenario_cart.testAddcart(Scenario_cart.java:39)
+<p>The following asserts failed:
+null</p>
+org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:37)
+<br/>at Scenario_search.scenario_class.TestValidSerch(scenario_class.java:91)
 <br/>25 lines not shown
 </td></tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">Scenario_search.scenario_class:TestInvalidSerch</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th></tr>
+<tr class="param stripe"><td>{Order_Set=1.0, Exp_Result=Sorry! There are no products to display., Search_Item=###, TC_ID=GB_01, Script_name=Invalid_Search, Execute_Flag=Y}</td>
+</tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
