--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,21 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Scenario_search.Scenario_cart</td>
+<td>Scenario_search.scenario_class</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testDeletecart</td>
-<td>regression </td>
-</tr>
+<td>TestValidSerch</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testAddcart</td>
-<td>smoke </td>
-</tr>
+<td>TestInvalidSerch</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
