--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee8099">  <td>17/12/19 23:46:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_cart.testAddcart(java.util.Map)[pri:0, instance:Scenario_search.Scenario_cart@16d7e38]">testAddcart</td> 
-  <td>main@29658798</td>   <td></td> </tr>
+<tr bgcolor="bbd18b">  <td>17/12/25 22:42:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="scenario_class.TestInvalidSerch(java.util.Map)[pri:0, instance:Scenario_search.scenario_class@78d6c6]">TestInvalidSerch</td> 
+  <td>main@26864145</td>   <td></td> </tr>
+<tr bgcolor="bbd18b">  <td>17/12/25 22:43:09</td>   <td>55852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="scenario_class.TestValidSerch(java.util.Map)[pri:0, instance:Scenario_search.scenario_class@78d6c6]">TestValidSerch</td> 
+  <td>main@26864145</td>   <td></td> </tr>
 </table>
